Tue Jun 26 19:23:07 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Removed the silc_ske_check_version function and created
	  a SilcSKECheckVersion callback.  Added also a function
	  silc_ske_set_callbacks that is now used to set all SKE
	  callbacks.  The callback functions are not given to
	  the SKE functions anymore, but this function is used to
	  set the callbacks.

Mon Jun 25 21:42:51 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Do not add regex.h for WIN32.  The affected file
	  includes/silcincludes.h.

	* Added WIN32 DLL generation to lib/Makefile.am.pre.  It might
	  not work yet 100%.  It generates the DLL's automatically
	  when compiling with --with-win32 under cygwin.

Sun Jun 24 19:49:23 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* lib/contrib/regex.c is not compiled on WIN32.

	* Added silc_net_get_socket_opt function to the
	  lib/silcutil/silcnet.h.

	* Added includes/silcwin32.h for WIN32 specific includes
	  and definitions.

	* Do not use ptime structure or any of the posix process
	  functions on WIN32 in lib/silccrypt/silrng.c.

	* Added silc_gettimeofday to provide generic function
	  for struct timeval on all platforms.  Added the function
	  to lib/silcutil/silcutil.h.

Sun Jun 24 12:19:52 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Moved the lib/silccore/silcsockconn.[ch] to the utility
	  library as they clearly belong there.  As a plus side we
	  can make the actual socket connection routines platform
	  specific.

	  Added also new generic function silc_socket_read and
	  silc_socket_write (that used to be silc_packet_[read/write].
	  The implementation of these are platform specific.

	* Added WIN32 specific routines of silc_socket_[read/write]
	  to lib/silcutil/win32/silcwin32sockconn.c.

Sat Jun 23 16:01:00 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added preliminary support for native WIN32 compilation under
	  cygwin (using the -mno-cygwin option for GCC) to the