@@ -7,6 +7,14 @@ Tue Jun 26 19:23:07 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 	  the SKE functions anymore, but this function is used to
 	  set the callbacks.
 
+	* Fixed the WIN32 DLL generation in lib/Makefile.am.pre.
+
+	* Added `silc_version' argument to the silc_client_alloc
+	  to define the version of the application for the library.
+	  The library will use the version string to compare it
+	  against the remote host's (usually a server) version
+	  string.  Affected file lib/silcclient/silcapi.h
+
 Mon Jun 25 21:42:51 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Do not add regex.h for WIN32.  The affected file
